--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -62,3 +62,13 @@
   margin: 2em 2em;
   background-color: #f1f2f6;
 }
+
+/*
+** image du pokemon sélectionné
+*/
+.displayPokemon {
+  height: 9rem;
+  width: auto;
+  border-radius: 0.5em;
+  background-color: bisque;
+}
