--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -40,24 +40,26 @@
   background-color: #ced6e0;
   padding: 2px;
   margin: 10px;
-  border-radius: 10px;
+  border-radius: 4px;
   margin: auto;
 }
 
 .imageGrid {
-  background-color: #a4b0be;
-  width: 10vw;
-  height: 10hw;
-  margin: 10px 10px;
-  padding: 10px;
+  /* background-color: #a4b0be; */
+  /* width: 10vw;
+  height: 10hw; */
+  /* margin: 1px 1px; */
+  /* padding: 10px; */
   text-align: center;
-  border-radius: 5px;
+  padding: 2px;
+  /* margin: 3px; */
+  border-radius: 50%;
   font-size: 30px;
 }
 
 
 .collectionItem {
-  width: 50vw;
+  /* width: 50vw; */
   list-style-type: none;
   margin: 2em 2em;
   background-color: #f1f2f6;
@@ -71,4 +73,17 @@
   width: auto;
   border-radius: 0.5em;
   background-color: bisque;
+}
+
+/*
+** sub titile detail
+*/
+.mySubtitle {
+  font-weight: bold;
+}
+/*
+** progress barre : display value
+*/
+.progress {
+margin: 0 !important;
 }
